--- a/AccessoriesApp.Web/appsettings.json
+++ b/AccessoriesApp.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AccessoriesApp;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False;"
+    "DefaultConnection": "Server=.;Database=AccessoriesApp;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AccessoriesApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
