--- a/AccessoriesApp.Data/AccessoriesApp.Data.csproj
+++ b/AccessoriesApp.Data/AccessoriesApp.Data.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\AccessoriesApp.Data.Models\AccessoriesApp.Data.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
