--- a/AccessoriesApp.Web.ViewModels/AccessoriesApp.Web.ViewModels.csproj
+++ b/AccessoriesApp.Web.ViewModels/AccessoriesApp.Web.ViewModels.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
